Note Build 42.20 stable release and beta-migration branch creation in STATUS.md
Build 42 went to Steam's public/stable branch 2026-07-29; the
beta-migration worktree/branch now exists but has no content commits
yet, and the LighterZ MP fluid-recipe risk is being re-tested against
the new stable build rather than the old beta snapshot.